<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:fillViewport="false"
    android:overScrollMode="never">
    <LinearLayout
    android:id="@+id/filter_buttons_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/filter_download_state"
        style="@style/FilterChipStyle"
        android:text="@string/local_available"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="8dp"
        />

    <TextView
        android:id="@+id/filter_modality"
        style="@style/FilterChipStyle"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:drawableTint="#FFFFFF"
        android:text="@string/modality_menu_title"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="8dp"
        android:minWidth="80dp"/>

    <TextView
        android:id="@+id/filter_vendor"
        style="@style/FilterChipStyle"
        android:text="@string/vendor_menu_title"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:drawableTint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:layout_marginEnd="8dp"
        android:minWidth="80dp"
        android:visibility="visible"/>

</LinearLayout>
</HorizontalScrollView>